--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="project-card h-full" data-aos="fade-up">
                     <div class="bg-white rounded-xl overflow-hidden shadow-lg hover:shadow-2xl transition-all border border-gray-100 h-full flex flex-col">
                         <div class="project-image-container bg-gradient-to-r from-emerald-500 to-teal-400">
-                            <img src="/images/dateflow.PNG" alt="DateFlow" loading="lazy">
+                            <img src="/images/dateflow.png" alt="DateFlow" loading="lazy">
                         </div>
                         <div class="p-8 flex flex-col flex-grow">
                             <h3 class="text-2xl font-bold text-gray-800 mb-4">DateFlow</h3>
