--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             <p class="text-gray-600 mb-6 flex-grow">
                                 Innovative food recipe search engine that generates recipes based on available ingredients, powered by OpenAI and built with Python Flask.
                             </p>
-                            <a href="#" class="inline-block px-6 py-3 bg-gradient-to-r from-orange-500 to-pink-500 text-white rounded-lg hover:from-orange-600 hover:to-pink-600 transition-all w-fit">
+                            <a href="https://github.com/CS-4800-Team-Project/CAM-proj" class="inline-block px-6 py-3 bg-gradient-to-r from-orange-500 to-pink-500 text-white rounded-lg hover:from-orange-600 hover:to-pink-600 transition-all w-fit">
                                 View Project
                             </a>
                         </div>
