--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
                     <p class="text-xl md:text-2xl text-gray-600 mt-4 opacity-0" id="subtitle">
                         Software Developer
                     </p>
+                    <div class="mt-10 flex flex-col sm:flex-row sm:space-x-4 space-y-4 sm:space-y-0 opacity-0" id="hero-buttons">
+                        <a href="pricing.html" 
+                           class="group flex items-center justify-center px-6 py-3 bg-gradient-to-r from-purple-600 to-indigo-600 text-white rounded-lg hover:from-purple-700 hover:to-indigo-700 shadow-md hover:shadow-lg transform hover:-translate-y-0.5 transition-all text-lg font-medium">
+                            View Pricing
+                        </a>
+                        <a href="michael.pdf" target="_blank" 
+                           class="group flex items-center justify-center px-6 py-3 bg-gradient-to-r from-gray-700 to-gray-800 text-white rounded-lg hover:from-gray-800 hover:to-gray-900 shadow-md hover:shadow-lg transform hover:-translate-y-0.5 transition-all text-lg font-medium">
+                            <svg class="w-5 h-5 mr-2 -ml-1 group-hover:scale-110 transition-transform" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" /></svg>
+                            Download Resume
+                        </a>
+                    </div>
                 </div>
                 <div class="md:w-1/2 flex justify-center mt-8 md:mt-0" data-aos="fade-left">
                     <div class="relative w-64 h-64 md:w-80 md:h-80">
